logs/django-account.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/account'...
Listing './lib/python3.5/site-packages/account/locale'...
Listing './lib/python3.5/site-packages/account/locale/ru'...
Listing './lib/python3.5/site-packages/account/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/account/locale/uk'...
Listing './lib/python3.5/site-packages/account/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/account/management'...
Listing './lib/python3.5/site-packages/account/management/commands'...
Compiling './lib/python3.5/site-packages/account/management/commands/account_cleanup.py'...
***   File "./lib/python3.5/site-packages/account/management/commands/account_cleanup.py", line 14
    print '%d keys deleted' % count
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/account/templates'...
Listing './lib/python3.5/site-packages/account/templates/account'...
Listing './lib/python3.5/site-packages/account/templates/account/mail'...
Listing './lib/python3.5/site-packages/account/templatetags'...
Compiling './lib/python3.5/site-packages/account/templatetags/account_tags.py'...
***   File "./lib/python3.5/site-packages/account/templatetags/account_tags.py", line 16
    raise template.TemplateSyntaxError, "%r tag requires arguments" % token.contents.split()[0]
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_account-0.1.14.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
